styles: update about page

--- a/src/less/about.less
+++ b/src/less/about.less
@@ -1,5 +1,5 @@
 /* about page */
-@import "base.less";
+@import 'base.less';
 @import 'header.less';
 @import 'footer.less';
 
@@ -151,6 +151,7 @@
       p {
         max-width: 10.5rem;
         margin: 2px auto;
+        font-weight: 400;
       }
     }
 
@@ -160,6 +161,7 @@
       }
     }
 
+    // TODO: flex and <svg>
     .image-wrap {
       height: 2.4rem;
 
