styles and templates: doc/blog/recruit/meetup

--- a/layouts/blog-cn/single.html
+++ b/layouts/blog-cn/single.html
@@ -50,8 +50,8 @@
                 <div class="operate">
                     <div class="row">
                         <div class="item">
-                            <a href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fwww.pingcap.com%2f$url$" class="link_icon">
-                              <i class="icon">{{ partial "svgs/icon-share.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i>分享
+                            <a href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fwww.pingcap.com%2f$url$">
+                              <i class="icon">{{ partial "svgs/icon-share.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i><span>分享</span>
                             </a>
                         </div>
                     </div>
