--- a/layouts/docs-cn/single.html
+++ b/layouts/docs-cn/single.html
@@ -25,23 +25,24 @@
 
         <div class="operate">
             <div class="item">
-                <a href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fwww.pingcap.com%2f$url$" class="link_icon">
-                  <i class="icon">{{ partial "svgs/icon-share.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i>分享
+                <a href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fwww.pingcap.com%2f$url$">
+                  <i class="icon">{{ partial "svgs/icon-share.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i><span>分享</span>
                 </a>
             </div>
             <div class="item" onclick="window.print();">
-                <a href="javascript:;" class="link_icon">
-                  <i class="icon">{{ partial "svgs/icon-print.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i>打印
+                <a href="javascript:;">
+                  <i class="icon">{{ partial "svgs/icon-print.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i><span>打印</span>
+                </a>
+            </div>
+            <!-- TODO: add timestamp  -->
+            <div class="item">
+                <a href="http://download.pingcap.org/tidb-manual-cn.pdf" download="tidb-manual-cn.pdf">
+                  <i class="icon">{{ partial "svgs/icon-download.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i><span>下载</span>
                 </a>
             </div>
             <div class="item">
-                <a href="http://download.pingcap.org/tidb-manual-cn.pdf" class="link_icon" download="tidb-manual-cn.pdf">
-                  <i class="icon">{{ partial "svgs/icon-download.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i>下载
-                </a>
-            </div>
-            <div class="item">
-                <a href="mailto:info@pingcap.com" class="link_icon">
-                  <i class="icon icon-mail">{{ partial "svgs/icon-feedback.svg" (dict "fill" "#040000" "width" 22 "height" 17 ) }}</i>反馈
+                <a href="mailto:info@pingcap.com">
+                  <i class="icon icon-mail">{{ partial "svgs/icon-feedback.svg" (dict "fill" "#040000" "width" 22 "height" 17 ) }}</i><span>反馈</span>
                 </a>
             </div>
         </div>
