--- a/layouts/meetup/archive.html
+++ b/layouts/meetup/archive.html
@@ -11,7 +11,7 @@
         <div class="nav nav-tags">
             <h1 class="title">热门标签</h1>
             <a href="/meetup" class="all">ALL ({{ len $posts }})</a>
-            <ul class="tag-list f-cb">
+            <ul class="tag-list">
                 <!-- Get all posts-->
               <!-- loop all tags that you've used -->
               {{ range $name, $taxonomy := .Site.Taxonomies.tags }}
