--- a/layouts/partials/footer-cn.html
+++ b/layouts/partials/footer-cn.html
@@ -2,7 +2,7 @@
 <section class="footer">
     <div class="container">
         <div class="left">
-            <img class="logo" src="https://download.pingcap.com/images/pingcap_logo.png" alt="PingCap" style="width: 140px;">
+            <img class="logo" src="https://download.pingcap.com/images/pingcap_logo.png" alt="PingCap">
             <span class="copyright"> &copy; 2017 北京平凯星辰科技发展有限公司</span>
             <a href="{{ or $data_i18_link .Params.data_i18_page_link }}" class="btn-lang" id="lang">English</a>
         </div>
