--- a/src/less/about.less
+++ b/src/less/about.less
@@ -14,7 +14,7 @@
 .about-contact,
 .about-culture,
 .about-founders {
-  padding: 6rem 0;
+  padding: @vertical_padding @horizontal_padding;
   text-align: center;
 
   .title {
