--- a/src/less/base.less
+++ b/src/less/base.less
@@ -13,6 +13,10 @@
 // box
 @box_size: border-box;
 
+//padding
+@vertical_padding: 6rem;
+@horizontal_padding: 0.75rem;
+
 // mixins
 // border-radius
 .rounded-corners (@radius: 3px) {
