--- a/layouts/blog-cn/list.html
+++ b/layouts/blog-cn/list.html
@@ -15,8 +15,7 @@
           {{ $posts := where (where .Site.Pages "Section" "blog-cn") ".Params.title" "!=" nil  }}
             <h1 class="title">热门标签 <a class="rss" href="/rss/feed-cn.xml" title="RSS Feed">{{ partial "svgs/icon-rss.svg" (dict "fill" "#3A59F0" "width" 13 "height" 17 ) }}</a></h1>
             <a href="/bloglist-zh.html" class="all">ALL ({{ len $posts }})</a>
-            <ul class="tag-list f-cb">
-                {{/*
+            <div class="tag-list">
                     <!-- Get all posts-->
                   <!-- loop all tags that you've used -->
                   <!-- {{ range $name, $taxonomy := .Site.Taxonomies.tags }}
@@ -33,14 +32,13 @@
                     <!-- {{ $name }} -->
                         {{ if $.Scratch.Get "tagCounter" }}
                         <!-- hide class for li, if less then 2 -->
-                          <li class="">
+                          <!-- <li class=""> -->
                             <a href="{{ $name }}" class="tag">
                               {{ $name }} ({{ $.Scratch.Get "tagCounter" }})</a>
-                          </li>
+                          <!-- </li> -->
                         {{ end }}
-                  {{end}} -->
-                 */}}
-            </ul>
+                  <!-- {{end}} -->
+            </div>
         </div>
         <div class="list">
             {{ range .Data.Pages.ByDate.Reverse }}
