--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -22,23 +22,24 @@
             </div>
             <div class="operate">
                 <div class="item">
-                    <a href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fwww.pingcap.com%2f$url$" class="link_icon">
-                      <i class="icon">{{ partial "svgs/icon-share.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i>Share
+                    <a href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fwww.pingcap.com%2f$url$">
+                      <i class="icon">{{ partial "svgs/icon-share.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i><span>Share</span>
                     </a>
                 </div>
                 <div class="item" onclick="window.print();">
-                    <a href="javascript:;" class="link_icon">
-                      <i class="icon">{{ partial "svgs/icon-print.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i>Print
+                    <a href="javascript:;">
+                      <i class="icon">{{ partial "svgs/icon-print.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i><span>Print</span>
                     </a>
                 </div>
                 <div class="item">
-                    <a href="http://download.pingcap.org/tidb-manual-cn.pdf" class="link_icon" download="tidb-manual-cn.pdf">
-                      <i class="icon">{{ partial "svgs/icon-download.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i>Download
+                  <!-- TODO: add timestamp -->
+                    <a href="http://download.pingcap.org/tidb-manual-en.pdf" download="tidb-manual-en.pdf">
+                      <i class="icon">{{ partial "svgs/icon-download.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i><span>Download</span>
                     </a>
                 </div>
                 <div class="item">
-                    <a href="mailto:info@pingcap.com" class="link_icon">
-                      <i class="icon icon-mail">{{ partial "svgs/icon-feedback.svg" (dict "fill" "#040000" "width" 22 "height" 17 ) }}</i>Feedback
+                    <a href="mailto:info@pingcap.com">
+                      <i class="icon icon-mail">{{ partial "svgs/icon-feedback.svg" (dict "fill" "#040000" "width" 22 "height" 17 ) }}</i><span>Feedback</span>
                     </a>
                 </div>
             </div>
