--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,7 +2,7 @@
   {{ $data_i18_link := $.Scratch.Get "data_i18_link" }}
     <div class="container">
         <div class="left">
-          <img src="https://download.pingcap.com/images/pingcap_logo.png" class="logo" alt="PingCap" style="width: 140px;">
+          <img src="https://download.pingcap.com/images/pingcap_logo.png" class="logo" alt="PingCap">
           <span class="copyright">&copy; 2017 PingCAP. All Rights Reserved.</span>
           <a href="{{ or $data_i18_link .Params.data_i18_page_link }}" class="btn-lang" id="lang">中文</a>
         </div>
