--- a/layouts/recruit/list.html
+++ b/layouts/recruit/list.html
@@ -1,27 +1,26 @@
 {{ define "headcss" }}
 {{$.Scratch.Set "nav_active" "about"}}
 {{$.Scratch.Set "data_i18_link" "/recruit-cn" }}
-<link href="/css/joblist.css" rel="stylesheet">
+<!-- <link href="/css/joblist.css" rel="stylesheet"> -->
 {{ end }}
 
 {{ define "main" }}
-<div class="container">
-    <div class="row">
-        <div class="col-md-4 nav nav-tags">
+<div class="recruit">
+    <div class="container">
+        <div class="nav nav-tags">
             <h1 class="title">Job Categories</h1>
-            <ul class="tag-list f-cb">
+            <ul class="tag-list">
               {{ range .Data.Pages.GroupByParam "tags" }}
-              <!-- Todo sel active class -->
+              <!-- TODO sel active class -->
               <li><a href="" class="tag"> {{ .Key }} ({{ len .Pages }})</a></li>
               {{ end }}
             </ul>
         </div>
-        <div class="col-md-8 list">
-            <h1 class="title board-title">Current Job Openings at PingCAP</h1>
+        <div class="list">
             {{ range .Data.Pages }}
-                <div class="job">
+                <div class="article">
                     <h1 class="title"><a href="{{ .URL }}">{{ .Title }}</a></h1>
-                    <div class="job_divider"></div>
+                    <div class="article_divider"></div>
                 </div>
             {{ end }}
         </div>
