--- a/src/less/header.less
+++ b/src/less/header.less
@@ -1,12 +1,17 @@
 /* header module */
 @import './base.less';
+
+// height
 @nav_height: 2rem;
-@search_box_width: 15rem;
 @search_box_height: 2rem;
 @nav_brand_height: 1.8rem;
+@header_height: calc(~'1.5rem + '@nav_height);
+
+// width
+@search_box_width: 15rem;
 
 header {
-  padding: 0.75rem;
+  padding: @horizontal_padding;
   width: 100%;
   background-color: @bg_black_with_alpha90;
 
@@ -72,7 +77,8 @@ header {
       font-size: 1rem;
       transition: opacity 0.15s ease-in;
 
-      &:focus {
+      &:focus,
+      &:hover {
         border-color: fade(@theme_blue, 50%);
       }
     }
