--- a/src/less/index.less
+++ b/src/less/index.less
@@ -3,13 +3,15 @@
 @import './header.less';
 @import './footer.less';
 
-// box
-@logo_wodth: 10.5rem;
+// width
+@logo_width: 10.5rem;
+
+// height
 @logo_height: 4rem;
-@header_height: calc(~'1.5rem + '@nav_height);
 @button_height: 1.8rem;
+
+// margin
 @advantage_row_margin: 4rem;
-@horizontal_padding: 0.75rem;
 
 // color
 @dark_blue: #0d0b1e;
@@ -22,9 +24,6 @@
 // others
 @line_height: 1.8;
 
-// .container {
-//   display: flex;
-// }
 /* Section 1 */
 .landingpage-slogan-mask {
   display: flex;
@@ -33,7 +32,7 @@
   width: 100%;
   height: 100%;
   min-height: 100vh;
-  padding: calc(~'4rem + '@header_height) @horizontal_padding;
+  padding: calc(~'@{vertical_padding} + @{header_height}') @horizontal_padding;
   background: url('/images/slogan-mask.png') no-repeat center top;
   background-attachment: fixed;
   background-size: cover;
@@ -54,7 +53,7 @@
   }
 
   .logo {
-    width: @logo_wodth;
+    width: @logo_width;
     height: @logo_height;
   }
 
@@ -72,7 +71,7 @@
   }
 
   .desc {
-    max-width: 72%;
+    max-width: 70%;
     font-size: @text_size;
     line-height: @line_height;
   }
@@ -131,7 +130,7 @@
 }
 /* Section 2 */
 .landingpage-features {
-  padding: calc(~'6rem + '@header_height) @horizontal_padding;
+  padding: calc(~'@{vertical_padding} + @{header_height}') @horizontal_padding;
   background: url('/images/features-mask.png') no-repeat center top;
   background-attachment: fixed;
   background-size: cover;
@@ -199,7 +198,8 @@
 }
 /* Section 3 */
 .landingpage-advantages {
-  padding: calc(~'6rem + '@header_height) @horizontal_padding 10rem;
+  padding: calc(~'@{vertical_padding} + @{header_height}') @horizontal_padding
+    10rem;
   background: url('/images/advantages-mask.png') no-repeat center bottom
     @dark_blue;
   background-size: cover;
