--- a/src/less/style.less
+++ b/src/less/style.less
@@ -2,5 +2,4 @@
 @import './about.less';
 @import './meetup.less';
 @import './doc.less';
-// @import './blog.less';
-@import './bloglist.less';
+@import './list.less';
