--- a/layouts/page/about-cn.html
+++ b/layouts/page/about-cn.html
@@ -17,23 +17,23 @@
 {{ end }} {{ define "footjs" }}
 <script type="text/javascript" src='https://webapi.amap.com/maps?v=1.3&key=5943f0161bc8beb9f40b4f652faf648f&callback=init'></script>
 <script type="text/javascript">
-  function init() {
-    var map = new AMap.Map('map', {
-      resizeEnable: true,
-      zoom: 15,
-      center: [116.357273, 40.042345],
-      mapStyle: 'amap://styles/light', //样式URL
+function init() {
+  var map = new AMap.Map('map', {
+    resizeEnable: true,
+    zoom: 15,
+    center: [116.357273, 40.042345],
+    mapStyle: 'amap://styles/light' //样式URL
+  })
+  //添加点标记，并使用自己的icon
+  new AMap.Marker({
+    map: map,
+    position: [116.357273, 40.042345],
+    icon: new AMap.Icon({
+      size: new AMap.Size(32, 32), //图标大小
+      image: 'https://download.pingcap.com/images/location.svg'
     })
-    //添加点标记，并使用自己的icon
-    new AMap.Marker({
-      map: map,
-      position: [116.357273, 40.042345],
-      icon: new AMap.Icon({
-        size: new AMap.Size(32, 32), //图标大小
-        image: 'https://download.pingcap.com/images/location.svg',
-      }),
-    })
-  }
+  })
+}
 </script>
 {{ end }} {{ define "main" }}
 <!-- Todo merge zh and en with single layout with diff i18 front matter  -->
@@ -50,7 +50,7 @@
     <div class="desc">
       PingCAP 是国内第一家开源的新型分布式 NewSQL 数据库公司，秉承开源是基础软件的未来这一理念， PingCAP 持续扩大社区影响力，致力于前沿技术领域的创新实现。其独立研发项目 TiDB 灵感来自于 Google Spanner/F1，具备「分布式强一致性事务、在线弹性水平扩展、故障自恢复的高可用、跨数据中心多活」等核心 NewSQL 特性，是大数据时代理想的数据库集群和云数据库解决方案。
     </div>
-    <a class="link-openjobs" href="/recruit-cn">OPEN JOBS {{ partial "svgs/icon-right-arrow.svg" (dict "fill" "#202884" "width" 22 "height" 22 ) }}</a>
+    <a class="link" href="/recruit-cn">OPEN JOBS {{ partial "svgs/icon-right-arrow.svg" (dict "fill" "#202884" "width" 22 "height" 22 ) }}</a>
   </div>
 </section>
 <section class="about-founders">
