--- a/layouts/page/about.html
+++ b/layouts/page/about.html
@@ -17,24 +17,24 @@
 {{ define "footjs" }}
 <script type="text/javascript" src='https://webapi.amap.com/maps?v=1.3&key=5943f0161bc8beb9f40b4f652faf648f&callback=init'></script>
 <script type="text/javascript">
-  function init() {
-    var map = new AMap.Map('map', {
-      resizeEnable: true,
-      zoom: 15,
-      center: [116.357273, 40.042345],
-      mapStyle: 'amap://styles/light', //样式URL
+function init() {
+  var map = new AMap.Map('map', {
+    resizeEnable: true,
+    zoom: 15,
+    center: [116.357273, 40.042345],
+    mapStyle: 'amap://styles/light' //样式URL
+  })
+  //添加点标记，并使用自己的icon
+  new AMap.Marker({
+    map: map,
+    position: [116.357273, 40.042345],
+    icon: new AMap.Icon({
+      size: new AMap.Size(32, 32), //图标大小
+      image: 'https://download.pingcap.com/images/location.svg'
     })
-    //添加点标记，并使用自己的icon
-    new AMap.Marker({
-      map: map,
-      position: [116.357273, 40.042345],
-      icon: new AMap.Icon({
-        size: new AMap.Size(32, 32), //图标大小
-        image: 'https://download.pingcap.com/images/location.svg',
-      }),
-    })
-    map.setLang('en')
-  }
+  })
+  map.setLang('en')
+}
 </script>
 {{ end }}
 
@@ -54,7 +54,7 @@
         Headquartered in Beijing, PingCAP is a thriving company that develops TiDB, an open source distributed Hybrid Transactional/Analytical Processing (HTAP) database. The majority of PingCAP’s senior engineers and architects worked for famous internet giants,
         such as Twitter.com, JD.com, Baidu.com, Qihoo 360, Sogou.com, Wandou Labs, etc.
     </div>
-    <a href="/recruit" class="link-openjobs">OPEN JOBS {{ partial "svgs/icon-right-arrow.svg" (dict "fill" "#202884" "width" 22 "height" 22 ) }}</a>
+    <a href="/recruit" class="link">OPEN JOBS {{ partial "svgs/icon-right-arrow.svg" (dict "fill" "#202884" "width" 22 "height" 22 ) }}</a>
   </div>
 </section>
 <section class="about-founders">
