markdown: fixed format for recruit tags

--- a/layouts/partials/tags-nav.html
+++ b/layouts/partials/tags-nav.html
@@ -6,7 +6,7 @@
         {{ $.Scratch.Set "tagCounter" 0 }}
         <!-- increment counter if post contains the current tag-->
         <!-- tag name: {{ $name }}, {{$taxonomy}} -->
-        {{ range $posts}}
+        {{ range .posts}}
         <!-- Post tags: {{.Params.tags}} -->
           {{ if in .Params.tags $name }}
             {{ $.Scratch.Add "tagCounter" 1 }}
