templates and readme

--- a/layouts/meetup/archive.html
+++ b/layouts/meetup/archive.html
@@ -1,7 +1,7 @@
+{{ define "title" }}Meetup{{ end }}
 {{ define "headcss" }}
 {{$.Scratch.Set "nav_active" "meetup"}}
 {{$.Scratch.Set "data_i18_cn" true }}
-<!-- <link href="/css/bloglist.css" rel="stylesheet"> -->
 {{ end }}
 
 {{ define "main" }}
