--- a/layouts/meetup/single.html
+++ b/layouts/meetup/single.html
@@ -1,8 +1,8 @@
+{{ define "title" }}Meetup{{ end }}
 {{ define "headcss" }}
 {{$.Scratch.Set "nav_active" "meetup"}}
 {{$.Scratch.Set "data_i18_cn" true }}
-<!-- <link href="/css/doc.css" rel="stylesheet">
-<link href="/css/blog.css" rel="stylesheet"> -->
+
 {{ end }}
 
 {{ define "main" }}
