--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,6 +5,7 @@
     <ul class="navigations">
       <li class="{{if eq $nav_active " doc "}}sel{{end}}"><a href="/docs">Doc</a></li>
       <li class="{{if eq $nav_active " blog "}}sel{{end}}"><a href="/blog">Blog</a></li>
+      <li class="{{if eq $nav_active " weekly "}}sel{{end}}"><a href="/weekly">Weekly</a></li>
       <li class="{{if eq $nav_active " about "}}sel{{end}}"><a href="/about">About</a></li>
       <li><a class="btn-download" href="https://pingcap.com/doc-ansible-deployment-zh">Download</a></li>
      </ul>
