--- a/src/less/meetup.less
+++ b/src/less/meetup.less
@@ -1,6 +1,6 @@
 /* meetup page */
-@import 'about.less';
 @import 'base.less';
+@import 'about.less';
 
 @tidb-red: #e6002d;
 @tidb-blue: #1e2f4f;
@@ -8,17 +8,8 @@
 @red: #ff2c54;
 @link-blue: #202884;
 
-.mkdf-iwt-layout-text-on-hover {
-  .mkdf-iwt-link-abs {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 100;
-  }
-
-  .mkdf-iwt-image {
+.layout-text-on-hover {
+  .image {
     box-shadow: 0 5px 22px rgba(0, 0, 0, 0.1);
 
     img {
@@ -28,7 +19,7 @@
     }
   }
 
-  .mkdf-iwt-text {
+  .text {
     position: absolute;
     top: 0;
     left: 0;
@@ -42,7 +33,7 @@
     -moz-transition: opacity 0.25s;
     transition: opacity 0.25s;
 
-    .mkdf-iwt-title {
+    .title {
       display: inline-block;
       position: absolute;
       bottom: 50%;
@@ -75,10 +66,10 @@
   }
 
   &:hover {
-    .mkdf-iwt-text {
+    .text {
       opacity: 1;
 
-      .mkdf-iwt-title {
+      .title {
         opacity: 1;
         -webkit-transform: translate3d(0, 0, 0);
         -moz-transform: translate3d(0, 0, 0);
@@ -103,20 +94,6 @@
 }
 
 section[class^='meetup-landingpage-'] {
-  // .details {
-  // margin-top: 10px;
-  ul {
-    margin: 0;
-    padding: 0;
-    display: block;
-    list-style-type: none;
-    list-style-position: inside;
-
-    li {
-      opacity: 1;
-    }
-  }
-
   h2 {
     margin: 25px 0 16px;
     font-size: 1rem;
@@ -148,10 +125,34 @@ section[class^='meetup-landingpage-'] {
     }
   }
 
-  .item {
-    margin-bottom: 2rem;
+  .details {
+    display: flex;
+    flex-direction: column;
+
+    .row {
+      display: flex;
+      flex-flow: row wrap;
+      align-items: flex-start;
+      justify-content: space-between;
+    }
+
+    .item {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 2rem;
+
+      .link-abs {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 100;
+      }
+    }
   }
-  // }
 }
 
 .meetup-landingpage-banner {
@@ -187,7 +188,7 @@ section[class^='meetup-landingpage-'] {
     }
   }
 
-  .mkdf-iwt-image {
+  .image {
     box-shadow: none;
 
     img {
@@ -196,10 +197,10 @@ section[class^='meetup-landingpage-'] {
     }
   }
 
-  .mkdf-iwt-text {
+  .text {
     padding: 30px 70px;
 
-    .mkdf-iwt-title {
+    .title {
       letter-spacing: 4px;
       bottom: 30px;
       right: 70px;
@@ -213,18 +214,11 @@ section[class^='meetup-landingpage-'] {
 
 .meetup-landingpage-review {
   .details {
-    display: flex;
-    flex-flow: row wrap;
-    align-items: flex-start;
-    justify-content: space-between;
     .item {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
       max-width: 30%;
     }
-    .mkdf-iwt-layout-text-on-hover {
-      .mkdf-iwt-text {
+    .layout-text-on-hover {
+      .text {
         padding: 30px 10px;
       }
     }
@@ -264,48 +258,40 @@ section[class^='meetup-landingpage-'] {
 }
 
 .meetup-landingpage-lecturer {
-  padding-top: 6rem;
-
   .details {
-    display: flex;
-    flex-direction: column;
-
-    .row {
-      display: flex;
-    }
-  }
-
-  .item {
-    min-height: 350px;
-
-    .mkdf-iwt-layout-text-on-hover {
-      .mkdf-iwt-text {
-        padding: 40px 20px;
-        p {
-          opacity: 0;
-          color: @dark-blue;
-          font-size: 0.8rem;
-          font-weight: 400;
-          -webkit-transform: translate3d(40%, 0, 0);
-          -moz-transform: translate3d(40%, 0, 0);
-          transform: translate3d(40%, 0, 0);
-          -webkit-transition: -webkit-transform 0s 0.2s, opacity 0.2s;
-          transition: transform 0s 0.2s, opacity 0.2s;
-        }
-      }
-
-      &:hover {
-        .mkdf-iwt-text {
+    .item {
+      min-height: 350px;
+      flex-basis: 20%;
+      padding: 0 @horizontal_padding;
+      .layout-text-on-hover {
+        .text {
+          padding: 40px 20px;
           p {
-            opacity: 1;
-            -webkit-transform: translate3d(0, 0, 0);
-            -moz-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
-            -webkit-transition: -webkit-transform 0.35s
-                cubic-bezier(0.15, 0.7, 0.54, 0.99),
-              opacity 0.4s;
-            transition: transform 0.35s cubic-bezier(0.15, 0.7, 0.54, 0.99),
-              opacity 0.4s;
+            opacity: 0;
+            color: @dark-blue;
+            font-size: 0.8rem;
+            font-weight: 400;
+            -webkit-transform: translate3d(40%, 0, 0);
+            -moz-transform: translate3d(40%, 0, 0);
+            transform: translate3d(40%, 0, 0);
+            -webkit-transition: -webkit-transform 0s 0.2s, opacity 0.2s;
+            transition: transform 0s 0.2s, opacity 0.2s;
+          }
+        }
+
+        &:hover {
+          .text {
+            p {
+              opacity: 1;
+              -webkit-transform: translate3d(0, 0, 0);
+              -moz-transform: translate3d(0, 0, 0);
+              transform: translate3d(0, 0, 0);
+              -webkit-transition: -webkit-transform 0.35s
+                  cubic-bezier(0.15, 0.7, 0.54, 0.99),
+                opacity 0.4s;
+              transition: transform 0.35s cubic-bezier(0.15, 0.7, 0.54, 0.99),
+                opacity 0.4s;
+            }
           }
         }
       }
